...
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ly.generalassemb.espresso.NewTransactionActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionEditText"
        android:hint="Description"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/amountEditText"
        android:hint="Amount"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_below="@+id/descriptionEditText" />

    <LinearLayout
...
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Withdraw"
            android:id="@+id/withdrawButton"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Deposit"
            android:id="@+id/depositButton"
            android:layout_weight="1"
            android:backgroundTint="@color/accent_material_light"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
...
